push modif readme

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,6 @@ TODO checklist for instructors / students:
 - [ ] Implement export_pdf in application/controllers/Laporan.php
 - [ ] Implement export_excel in application/controllers/Laporan.php
 - [ ] Add form_validation rules and CSRF protection
-- [ ] Make seed script to create admin user automatically
-- [ ] Add role-based access control (admin/user)
-- [ ] Improve UI (Bootstrap or Tailwind)
+- [ ] Improve UI (Bootstrap)
 - [ ] Add unit tests for Transaksi_model
 - [ ] Add pagination to transaksi listing
